# eco-audience-builder

./: .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  package-lock.json  pyproject.toml
.impeccable/: design.json
.impeccable/critique/: 2026-06-30T17-27-28Z__web-components-audiencebuilder-tsx.md
app/: ads.py  ads_normalize.py  audience_query.py  audiences.py  db.py  export.py  facets.py  server.py  servicetitan.py  snapshot.py
reports/: architecture-data-challenges.md
skills/eco-edw-querying/: SKILL.md
skills/eco-edw-querying/references/: approved-sql-patterns.md  catalog.json  (+3 more)
static/: app.js  index.html  styles.css
tests/: test_ads_endpoints.py  test_ads_normalize.py  test_audience_query.py  test_db.py  test_endpoints.py  test_export.py  test_parity.py  test_snapshot.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  instrumentation.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AudienceBuilder.tsx  Dropdown.tsx  Section.tsx  contracts.ts
web/lib/: ads.ts  adsNormalize.test.ts  adsNormalize.ts  apiClient.ts  audience.test.ts  audience.ts  audienceQuery.test.ts  audienceQuery.ts  audiences.test.ts  audiences.ts  customerColumns.ts  db.test.ts  db.ts  editableSet.ts  errors.ts  export.test.ts  export.ts  facets.test.ts  facets.ts  format.ts  parity.test.ts  servicetitan.ts  snapshot.test.ts  snapshot.ts  snapshotStore.ts  types.ts  uiVocab.ts
web/types/: pg-cursor.d.ts
(+34 files in other folders)
